syntax = "proto3";

import "google/protobuf/empty.proto";

package proto;

service JoyciCore {
    rpc GitClone(GitCloneRequest) returns (google.protobuf.Empty);
    rpc ExecuteCommands(ExecuteCommandsRequest) returns (google.protobuf.Empty);
}

message GitCloneRequest {
    string repository = 1;
}

message ExecuteCommandsRequest {
    repeated string commands = 1;
}
